--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "moment": "^2.24.0",
+    "nodejs-base64-encode": "^1.1.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "socket.io": "^2.3.0"
