--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "update": "git pull && npm i && pm2 restart cc365"
   },
   "author": "",
   "license": "ISC",
