--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.4.1",
+    "connect-mongodb-session": "^2.4.1",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "mongoose": "^5.12.13",
     "nodejs-base64-encode": "^1.1.0",
+    "passport": "^0.4.1",
+    "passport-azure-ad-oauth2": "0.0.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "socket.io": "^2.4.1"
