--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^4.4.1",
-    "connect-mongodb-session": "^2.4.1",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -19,6 +18,7 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "mongoose": "^5.12.13",
     "nodejs-base64-encode": "^1.1.0",
     "passport": "^0.4.1",
