--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "update": "git pull && npm i && pm2 restart cc365"
+    "update": "git reset --hard && git pull && npm i"
   },
   "author": "",
   "license": "ISC",
