--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
