--- a/client/package.json
+++ b/client/package.json
@@ -7,19 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "core-js": "^3.6.5",
-    "luxon": "^2.3.0",
+    "core-js": "^3.21.1",
+    "luxon": "^2.3.1",
     "moment": "^2.29.1",
-    "motion": "^10.6.0",
+    "motion": "^10.6.2",
     "socket.io-client": "^4.4.0",
-    "vue": "^3.0.0",
+    "vue": "^3.2.31",
     "vue-awesome": "^4.5.0",
-    "vue-resize-observer": "^2.0.15",
-    "vue-router": "^4.0.0-0",
+    "vue-resize-observer": "^2.0.16",
+    "vue-router": "^4.0.13",
     "vue3-json-editor": "^1.1.4",
     "vuex": "^4.0.0-0"
   },
@@ -28,7 +28,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.31",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2"
   }
