Added copy command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app",
     "update": "git reset --hard && git pull && npm i && npm --prefix client install && npm run --prefix client build",
-    "build-client": "npm run --prefix client build",
+    "build-client": "npm run --prefix client build && cp -a oldpublic/. public/old/",
     "serve-client": "npm run --prefix client serve"
   },
   "author": "",
