--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app",
     "update": "git reset --hard && git pull && npm i && npm --prefix client install && npm run --prefix client build",
     "build-client": "npm run --prefix client build && cp -a oldpublic/. public/old/",
-    "serve-client": "npm run --prefix client serve"
+    "serve-client": "npm run --prefix client serve",
+    "build-vite": "npm run --prefix client-vite build"
   },
   "author": "",
   "license": "ISC",
