--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "update": "git reset --hard && git pull && npm i && npm --prefix client install && npm run --prefix client build",
-    "build-client": "npm run --prefix client build && cp -a oldpublic/. public/old/",
-    "serve-client": "npm run --prefix client serve",
+    "update": "git reset --hard && git pull && npm i && npm --prefix client-vite install && npm run --prefix client-vite build",
+    "build-client": "npm run --prefix client-vite build && cp -a oldpublic/. public/old/",
     "build-vite": "npm run --prefix client-vite build"
   },
   "author": "",
