--- a/client-vite/package.json
+++ b/client-vite/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vueuse/core": "^10.7.1",
     "core-js": "^3.31.0",
     "luxon": "^3.3.0",
     "moment": "^2.29.4",
