Moved Src to .env

--- a/client-vite/.env.production
+++ b/client-vite/.env.production
@@ -1,2 +1,4 @@
 VITE_SOCKET_ADRESS = 
 VITE_API_ROOT = /api/
+VITE_PBI_MYPAGE_L_SRC = https://app.powerbi.com/reportEmbed?reportId=64264877-874d-4dde-bc79-4a5a3846e503&appId=3852c8b7-7545-4131-a1f7-68cc875610d2&autoAuth=true&ctid=661f8f5f-1e7d-4d4d-a886-1d2661c4ddf8&navContentPaneEnabled=false&filterPaneEnabled=false&pageName=ReportSection
+VITE_PBI_MYPAGE_D_SRC = https://app.powerbi.com/reportEmbed?reportId=64264877-874d-4dde-bc79-4a5a3846e503&appId=3852c8b7-7545-4131-a1f7-68cc875610d2&autoAuth=true&ctid=661f8f5f-1e7d-4d4d-a886-1d2661c4ddf8&navContentPaneEnabled=false&filterPaneEnabled=false&pageName=ReportSection0ec235f1079f2f9d5a84
