--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "colors": "^1.4.0",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
