--- a/client-vite/package.json
+++ b/client-vite/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vueuse/core": "^10.7.1",
+    "chart.js": "^4.4.2",
     "core-js": "^3.31.0",
     "luxon": "^3.3.0",
     "moment": "^2.29.4",
