--- a/client-vite/package.json
+++ b/client-vite/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vueuse/core": "^10.7.1",
     "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.31.0",
     "luxon": "^3.3.0",
     "moment": "^2.29.4",
