--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-azure-ad-oauth2": "0.0.4",
     "pm2": "^5.3.0",
+    "purecloud-platform-client-v2": "^212.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "socket.io": "^4.7.0"
