--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "purecloud-platform-client-v2": "^212.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "socket.io": "^4.7.0"
+    "socket.io": "^4.7.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
