--- a/client-vite/package.json
+++ b/client-vite/package.json
@@ -25,6 +25,7 @@
     "vue-resize-observer": "^2.0.16",
     "vue-router": "^4.2.2",
     "vue3-json-editor": "^1.1.5",
+    "vue3-shortkey": "^4.0.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
