--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "socket.io": "^4.7.0",
+    "vue3-shortkey": "^4.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
